fixed z-index

--- a/src/styles/05-objects/_objects.hero.scss
+++ b/src/styles/05-objects/_objects.hero.scss
@@ -4,6 +4,7 @@
   position: relative;
   overflow: hidden;
   -webkit-transform: translate3d(0,0,0);
+  z-index: 3;
 
   padding: {
     top: rem(198px);
