--- a/src/styles/05-objects/_objects.phoenix.scss
+++ b/src/styles/05-objects/_objects.phoenix.scss
@@ -5,7 +5,7 @@
     top: rem(98px);
     bottom: rem(277px);
   }
-  z-index: 2;
+  z-index: 4;
 
   @include media-breakpoint-down(md) {
     padding-bottom: rem(110px);
